<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions" />

    <FrameLayout
        android:id="@+id/fl_water_increment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/ib_water_increment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/water_increase_content_desc"
            android:onClick="incrementWater"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_local_drink_grey_120" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--    Centering TextView within image-->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="64"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_water_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="86dp"
                android:text="@string/default_water_count"
                android:textColor="#424242"
                android:textSize="35sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_fluid_cups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cups: "
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_cups_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="14dp"
                    android:text="@string/default_water_count"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_fluid_ounces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="Ounces: "
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_ounces_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/default_ounces_count"
                    android:textSize="24sp"/>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_power_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/charger_content_desc"
            android:src="@drawable/ic_power_grey_80"/>
        <TextView
            android:id="@+id/tv_charging_reminder_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/iv_power_increment"
            android:layout_toRightOf="@id/iv_power_increment"
            android:text="@string/default_charge_notification_count"/>

    </RelativeLayout>


</LinearLayout>